--- a/ff_private/android/res/values/strings.xml
+++ b/ff_private/android/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="hello">Hello World, FlowerflowerActivity!</string>
-    <string name="app_name">紅茶ボタン</string>
+    <string name="app_name">鄙の姫、宮処の巫女、余所者の嫁</string>
 </resources>
